@@ -31,6 +31,8 @@ import java.io.File;
 import java.io.IOException;
 import java.io.PrintStream;
 
+import java.util.Objects;
+
 import org.junit.jupiter.api.Test;
 
 import static org.hamcrest.CoreMatchers.equalTo;
@@ -125,11 +127,11 @@ public class BisqHelpFormatterTest {
                 .defaultsTo(AnEnum.foo);
 
         ByteArrayOutputStream actual = new ByteArrayOutputStream();
-        String expected = new String(Files.readAllBytes(Paths.get(getClass().getResource("cli-output.txt").toURI())));
+        String expected = Files.readString(Paths.get(Objects.requireNonNull(getClass().getResource("cli-output.txt")).toURI()));
         if (System.getProperty("os.name").startsWith("Windows")) {
             // Load the expected content from a different file for Windows due to different path separator
             // And normalize line endings to LF in case the file has CRLF line endings
-            expected = new String(Files.readAllBytes(Paths.get(getClass().getResource("cli-output_windows.txt").toURI())))
+            expected = Files.readString(Paths.get(Objects.requireNonNull(getClass().getResource("cli-output_windows.txt")).toURI()))
                     .replaceAll("\\r\\n?", "\n");
         }
 
